--- a/gymclubapp/pubspec.yaml
+++ b/gymclubapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.3.20
   provider: ^6.0.3
   cloud_firestore: ^3.1.18
+  curved_navigation_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
