--- a/gymclubapp/pubspec.yaml
+++ b/gymclubapp/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.3
   cloud_firestore: ^3.1.18
   curved_navigation_bar: ^1.0.3
+  modal_bottom_sheet: ^2.0.1
 
 dev_dependencies:
   flutter_test:
