--- a/gymclubapp/pubspec.yaml
+++ b/gymclubapp/pubspec.yaml
@@ -29,17 +29,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.18.0
   firebase_auth: ^3.3.20
   provider: ^6.0.3
   cloud_firestore: ^3.1.18
   curved_navigation_bar: ^1.0.3
-  modal_bottom_sheet: ^2.0.1
+  flutter_slidable: ^1.3.0
+
 
 dev_dependencies:
   flutter_test:
