--- a/gymclubapp/pubspec.yaml
+++ b/gymclubapp/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cloud_firestore: ^3.1.18
   curved_navigation_bar: ^1.0.3
   flutter_slidable: ^1.3.0
+  tab_indicator_styler: ^2.0.0
 
 
 dev_dependencies:
